# NCCU_CG_Course

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
header/: CMakeLists.txt  NCCU_CG_Course.h  buttom_handle.hpp  loadmodel.h  ogt_vox.h  renderer.h  shader.h  uniformConfig.h  view.hpp
models/: default_cube.vox  slime.mtl  sword.vox
shaders/: fgrid.glsl  fshader.glsl  ftoon.glsl  vgrid.glsl  vshader.glsl  vtoon.glsl
src/: CMakeLists.txt  buttom_handle.cpp  check.cpp  demo_vox.cpp  loadmodel.cpp  main.cpp  renderer.cpp  shader.cpp  uniformConfig.cpp  view.cpp
